@@ -197,6 +197,9 @@ Changes include:
   RISC OS: support Windows and Menu key input.
 </P>
 <P>
+  RISC OS: implement SDL_WM_IconifyWindow()
+</P>
+<P>
   Configuration: fix library detection selecting wrong lib (bug <a href="https://bugzilla.libsdl.org/show_bug.cgi?id=2795">2795</a>.)
 </P>
 <P>
